--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.10.0",
     "mongoose-unique-validator": "^4.0.1",
     "nodemon": "^3.1.9",
-    "papaparse": "^5.5.2"
+    "papaparse": "^5.5.2",
+    "string-similarity": "^4.0.4"
   }
 }
